# generic-reveng

./: .clang-tidy  .gitignore  .gitmodules  .nvimrc  AbandonedIcebox.sln  CMakeLists.txt  DebugEngine.sln  FrameDump.sln  LICENSE  PatternGenerator.sln  README.md  build_windows.bat
AutoReverse/: AutoReverse.sln  AutoReverse.sln.DotSettings
DebugEngine.Dummy/: main.c  (+1 more)
decompilation/: CMakeLists.txt
decompilation/include/decompilation/: data_section.hpp  instruction.hpp  instruction_block.hpp  instruction_impact.hpp  instruction_set_architecture.hpp  memory.hpp  process.hpp  program.hpp
decompilation/include/reil/: disassembler.hpp
decompilation/source/: common_exception.hpp  data_section.cpp  disassembler.cpp  disassembler.hpp  execution_engine.cpp  execution_engine.hpp  instruction.cpp  instruction_block.cpp  instruction_impact.cpp  memory.cpp  monitor.cpp  monitor.hpp  process.cpp  program.cpp
decompilation/submodule/: CMakeLists.txt
decompilation/test/: test_process.cpp
revengine/: CMakeLists.txt
revengine-disassembler/: CMakeLists.txt
revengine-disassembler/include/revengine/: disassembler.hpp  reil_disassembler.hpp
revengine-disassembler/source/: disassembler.cpp  disassembler_handle.cpp  disassembler_handle.hpp  reil_disassembler.cpp  reil_disassembler_handle.cpp  reil_disassembler_handle.hpp
revengine-disassembler/submodule/: CMakeLists.txt
revengine/include/revengine/: data_section.hpp  execution_path.hpp  expression.hpp  expression_composition.hpp  expression_fork.hpp  instruction.hpp  instruction_block.hpp  instruction_block_graph.hpp  instruction_set_architecture.hpp  machine_impact.hpp  machine_monitor.hpp  process.hpp
revengine/include/revengine/z3/: ast.hpp  ast_base.hpp  context.hpp  expression.hpp  function_declaration.hpp  sort.hpp
revengine/source/: address_space_segment.cpp  address_space_segment_exclusive_address_order.cpp  data_section.cpp  data_section_exclusive_address_order.cpp  execution_path.cpp  expression.cpp  expression_composition.cpp  expression_fork.cpp  instruction.cpp  instruction_address_order.cpp  instruction_block.cpp  instruction_block_exclusive_address_order.cpp  instruction_block_graph.cpp  machine_impact.cpp  machine_monitor.cpp  process.cpp
revengine/source/binary/pe/: pe_file.cpp  pe_file.hpp  pe_process.cpp  pe_process.hpp
revengine/source/binary/pe/header/: pe_coff_header.cpp  pe_coff_header.hpp  pe_dos_header.cpp  pe_dos_header.hpp  pe_optional_header.cpp  pe_optional_header.hpp  pe_section_header.cpp  pe_section_header.hpp  reinterpret_copy.hpp  reinterpret_copy.tpp
revengine/source/z3/: ast.cpp  ast_base.cpp  context.cpp  expression.cpp  function.cpp  function.hpp  function_declaration.cpp  function_declaration.hpp  function_declaration.tpp  sort.cpp  sort.hpp  sort.tpp
revengine/submodule/: CMakeLists.txt
revengine/template/: template_instruction.cpp  template_instruction_block.cpp  template_instruction_block_graph.cpp
revengine/template/revengine/: machine_monitor.tpp  template_instruction_block.cpp  template_instruction_block_graph.cpp
revengine/template/revengine/z3/: ast.tpp  template_ast.cpp  template_function_declaration.cpp  template_sort.cpp
scout-api/: CMakeLists.txt
scout-api/include/scout-api/: scout-api.h
scout-api/source/: cfg.hpp  debugger.hpp  debugger_load.cpp  instruction.hpp  scout-api.cpp
scout-api/test/: cfg_test.cpp  debugger_test.cpp
source/analysis/: CMakeLists.txt  data_section.cpp  execution.cpp  execution_fork.cpp  execution_path.cpp  execution_state.cpp  execution_update.cpp  machine_impact.cpp  machine_monitor.cpp  machine_program.cpp  machine_state.cpp  machine_state_update.cpp
source/analysis/z3/: ast.cpp  ast_base.cpp  context.cpp  expression.cpp  function.cpp  function.hpp  sort.cpp  sort.hpp  syntax_tree.cpp  syntax_tree_base.cpp  z3_ast.cpp  z3_ast_base.cpp  z3_expression.cpp  z3_function.cpp  z3_function.hpp  z3_sort.cpp  z3_sort.hpp
source/disassembly/: CMakeLists.txt  reil_disassembler.cpp  reil_disassembler_handle.cpp  reil_disassembler_handle.hpp
source/grev/: CMakeLists.txt  execution.cpp  execution_path.cpp  execution_state.cpp  machine_monitor.cpp  machine_process.cpp  machine_program.cpp
source/grev/z3/: context.cpp  expression.cpp  sort.cpp  syntax_tree.cpp
stage0/: CMakeLists.txt
stage0/include/stage0/: stage0.h
stage0/source/: cfg.cpp  cfg.hpp  control_flow_graph.cpp  control_flow_graph.hpp  debugger.cpp  debugger.hpp  debugger_load.cpp  graph.hpp  instruction.cpp  loader.cpp  loader.hpp  stage0.cpp
stage0/test/: cfg_test.cpp  control_flow_graph_test.cpp  debugger_test.cpp
submodule/: CMakeLists.txt
submodules/: CMakeLists.txt
test/: .clang-tidy  CMakeLists.txt  cfg_test.cpp  debugger_test.cpp  helper.h  test.cpp  test.hpp  test_capstone.cpp  test_control_flow_graph.cpp  test_data_flow.cpp  test_data_monitor.cpp  test_debugger.cpp  test_disassembler.cpp  test_expression.cpp  test_expression_block.cpp  test_expression_composition.cpp  test_helper.cpp  test_helper.h  test_instruction_block_graph.cpp  test_intermediate.cpp  test_process.cpp  test_text_canvas.cpp  text_canvas_test.cpp  utf8_canvas_test.cpp
test/analysis/: mock_process.cpp  mock_process.hpp  mock_program.cpp  mock_program.hpp  test_machine_monitor.cpp
test/analysis/z3/: test_expression.cpp  test_z3_expression.cpp
test/disassembly/: test_reil_disassembler.cpp
test/grev/: test_machine_monitor.cpp  test_machine_process.cpp
test/grev-lift/: test_reil_disassembler.cpp
test/grev/z3/: test_z3_expression.cpp
test/mockup/revengine/: mock_process.cpp  mock_process.hpp
test/source/: test.hpp  test_disassembler.cpp  test_expression.cpp  test_expression_composition.cpp  test_instruction_block_graph.cpp  test_reil_disassembler.cpp
test/source/revengine/: test_machine_impact.cpp  test_machine_monitor.cpp
test/source/revengine/z3/: test_expression.cpp
utility/: CMakeLists.txt
utility/include/utility/: disassembler.hpp  emulator.hpp  machine_architecture.hpp
utility/source/: disassembler.cpp  emulator.cpp
utility/submodules/: CMakeLists.txt
(+467 files in other folders)
